Added filters and log view components

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,13 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" [routerLink]="['/']">powerbi_embedded_ui</a>
+            <a class="navbar-brand" [routerLink]="['/']">
+                <span>
+                    <img src="../../../assets/pbi-logo.png" style="width:20px; height: 20px;" />
+                </span>
+                &nbsp;
+                PowerBI Embedded Integration
+            </a>
             <button class="navbar-toggler"
                     type="button"
                     data-toggle="collapse"
