--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,4 +1,5 @@
 <body>
+    <spinner></spinner>
     <app-nav-menu></app-nav-menu>
     <div class="container-fluid">
         <router-outlet></router-outlet>
