--- a/ClientApp/src/app/logs-view/logs-view.component.html
+++ b/ClientApp/src/app/logs-view/logs-view.component.html
@@ -1,6 +1,15 @@
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">Console</h5>
+        <div class="row">
+            <div class="col-8">
+                <h5 class="card-title">
+                    Console
+                </h5>
+            </div>
+            <div class="col-4 float-right">
+                <a href="#" class="float-right" (click)="clear()">clear</a>
+            </div>
+        </div>
         <div class="log-container" #logs>
             <p *ngFor="let log of incomingLogs">{{log}}</p>
         </div>
